# base-logging

./: CMakeLists.txt  LICENSE  README.md  base-logging-config.cmake  manifest.xml
base/: CMakeLists.txt  Logging.hpp  base-logging.pc.in
base/logging/: logging_printf_style.cpp
src/: CMakeLists.txt  base-logging.pc.in
src/base/logging/: logging_iostream_style.hpp
test/: CMakeLists.txt  benchmark_time_per_message.cpp  test.cpp
